RESOLVED FIXED276915
[Baseline align] Fieldset should not return legend as baseline candidate
https://bugs.webkit.org/show_bug.cgi?id=276915
Summary [Baseline align] Fieldset should not return legend as baseline candidate
alan
Reported 2024-07-22 15:40:41 PDT
ssia
Attachments
Patch (5.45 KB, patch)
2024-07-22 15:51 PDT, alan
ews-feeder: commit-queue-
[fast-cq]Patch (8.87 KB, patch)
2024-07-22 19:27 PDT, alan
no flags
alan
Comment 1 2024-07-22 15:51:35 PDT
alan
Comment 2 2024-07-22 19:27:10 PDT
Created attachment 471942 [details] [fast-cq]Patch
EWS
Comment 3 2024-07-23 10:19:54 PDT
Committed 281253@main (f68f022b8310): <https://commits.webkit.org/281253@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 471942 [details].
Radar WebKit Bug Importer
Comment 4 2024-07-23 10:20:20 PDT
Note You need to log in before you can comment on or make changes to this bug.