Source/WebCore/rendering/RenderBlock.cpp
@@ -2499,6 +2499,8 @@ std::optional<LayoutUnit> RenderBlock::firstLineBaseline() const
         return std::optional<LayoutUnit>();
 
     for (RenderBox* child = firstInFlowChildBox(); child; child = child->nextInFlowSiblingBox()) {
+        if (child->isLegend() && child->isExcludedFromNormalLayout())
+            continue;
         if (auto baseline = child->firstLineBaseline())
             return LayoutUnit { child->logicalTop() + baseline.value() };
     }
@@ -2514,6 +2516,8 @@ std::optional<LayoutUnit> RenderBlock::lastLineBaseline() const
         return std::optional<LayoutUnit>();
 
     for (RenderBox* child = lastInFlowChildBox(); child; child = child->previousInFlowSiblingBox()) {
+        if (child->isLegend() && child->isExcludedFromNormalLayout())
+            continue;
         if (auto baseline = child->lastLineBaseline())
             return LayoutUnit { baseline.value() + child->logicalTop() };
     } 
